--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -5,7 +5,10 @@ on:
   push:
     tags: ['*']
 
+jobs:
   release:
+    runs-on: ubuntu-latest
+
     steps:
       - uses: ./.github/workflows/release.yaml
         with:
