--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -5,7 +5,10 @@ on:
   push:
     tags: ['*']
 
+jobs:
   release:
+    runs-on: ubuntu-latest
+
     steps:
       - name: Extract tag name
         id: tag
