--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -3,13 +3,14 @@ name: release new version
 on:
   workflow_dispatch:
   push:
-    tags: ['*']
+    branches: [master]
+    
 
 jobs:
   release:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: ./.github/workflows/release.yaml
+      - uses: ./.github/workflows/release
         with:
           tag_name: ${{ github.event.after }}
