--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: checkout the source code
+        uses: actions/checkout@v2
+
       - uses: ./.github/workflows/release
         with:
           tag_name: ${{ github.event.after }}
