--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -17,6 +17,22 @@ jobs:
       - name: checkout the source code
         uses: actions/checkout@v2
 
-      - uses: ./.github/workflows/release
+      - name: set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: set up docker buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: login to registry
+        uses: docker/login-action@v1
         with:
-          tag_name: ${{ steps.tag.output.VERSION }}
+          registry: registry.thehideaway.social
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: djeebus/csi-sshfs:${{ steps.tag.output.VERSION }}
