--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -17,6 +17,15 @@ jobs:
         id: tag
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
 
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Test
+        run: |
+          echo "GITHUB_REF = $GITHUB_REF"
+          echo "VERSION = $VERSION"
+          echo "RELEASE_VERSION = $RELEASE_VERSION"
+          echo "env.RELEASE_VERSION = ${{ env.RELEASE_VERSION }}"
+
       - name: set up QEMU
         uses: docker/setup-qemu-action@v1
 
