--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: login to registry
         uses: docker/login-action@v1
         with:
-          registry: registry.thehideaway.social
+          registry: ghcr.io
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
@@ -34,4 +34,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: registry.thehideaway.social/djeebus/csi-sshfs:${{ env.RELEASE_VERSION }}
+          tags: ghcr.io/djeebus/csi-sshfs:${{ env.RELEASE_VERSION }}
