--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -16,22 +16,14 @@ jobs:
       - name: Extract tag name
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: set up docker buildx
-        uses: docker/setup-buildx-action@v1
-
       - name: login to registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ github.actor }}
+          password: $${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ghcr.io/djeebus/csi-sshfs:${{ env.RELEASE_VERSION }}
+      - name: Build the hello-docker Docker image
+        run: |
+          docker build . --tag ghcr.io/djeebus/csi-sshfs:${{ env.RELEASE_VERSION }}
+          docker push ghcr.io/djeebus/csi-sshfs:${{ env.RELEASE_VERSION }}
