--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -20,8 +20,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: $${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the hello-docker Docker image
         run: |
